# data2rdf

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.md  docs.Dockerfile  pytest-coverage.txt  pytest.xml  setup.cfg  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  coverage.yml  release.yml
data2rdf/: __init__.py  abox_template_generation.py  annotation_confs.py  annotation_pipeline.py  config.py  csv_parser.py  excel_parser.py  key_map_prediction.py  mapper.py  parser.py  pipeline_logging.py  qudt_utils.py  rdf_generation.py  utils.py  warnings.py
data2rdf/chowlk/: utils.py
data2rdf/cli/: abox_conversion.py
data2rdf/emmo_lib/: chowlk_utils.py  emmo_unit_prefixes.csv  emmo_units.csv  emmo_utils.py  get_emmo_label_mappping.py  get_emmo_unit_prefix_df.py  unit_assignment_scheme.drawio
data2rdf/models/: __init__.py  base.py  graph.py  mapping.py  utils.py
data2rdf/modes/: __init__.py
data2rdf/parsers/: __init__.py  base.py  csv.py  excel.py  json.py  utils.py
data2rdf/pipelines/: __init__.py  abox_scaffolding_pipeline.py  annotation_pipeline.py  main.py
data2rdf/qudt/: utils.py
data2rdf/qudt_lib/: get_qudt_label_mapping.py  get_qudt_unit_df.py  qudt_utils.py
docs/: code.md  conf.py  config.md  dsms-integration.md  examples.md  index.md  intro.md  workflow.md
docs/assets/examples/tensile_test_example/: DX56_D_FZ2_WR00_43.TXT  tensile_test_mapping.xlsx  tensile_test_method_v5.ttl  tensile_test_method_v5.xml
docs/assets/img/: logo.drawio
docs/assets/img/docu/: CSV-Parser.drawio  TBox-ABox-Data.drawio  csv2rdf-roadmap.drawio  csv2rdf_generic_approach_flowchart.drawio  csv2rdf_generic_approach_flowchart_high_level.drawio  csv2rdf_generic_approach_flowchart_high_level_v2.drawio  csv2rdf_generic_approach_flowchart_high_level_v2_check_sucess.drawio  data2rdf_flowchart.drawio  multi-file-set-up.drawio  pipeline_file_structure.drawio  template_vs_multiple_relations.drawio  tensile_test_method.hasKeyExp.drawio  ~$pipeline_file_structure.drawio.bkp
docs/examples/abox/: 01_csv.md  1.1_csv.md  1.2_excel.md  1.3_json.md  1.4_csv_wo_metadata.md  1.5_csv_w_na.md  1.6_custom_relations.md  1_csv.md  2_excel.md  2_pipeline_run_and_outputs.md  3_json.md  4_csv_wo_metadata.md  5_csv_w_na.md  6_custom_relations.md
docs/examples/tbox/: tbox.md
examples/: 1_csv.ipynb  2_excel.ipynb  3_json.ipynb  4_csv_wo_metadata.ipynb  5_csv_w_na.ipynb  6_graph_custom_relations.ipynb  7_tbox.ipynb  output_csv.ttl  output_excel.ttl  pipeline_demo.ipynb
tests/: test_models.py  test_utils.py
tests/abox/: test_models.py  utils.py
tests/abox/csv_empty_rows/: test_parser.py  test_pipeline.py
tests/abox/csv_empty_rows/output/: output_csv_parser.ttl  output_csv_pipeline.ttl
tests/abox/csv_pipeline_test/: test_parser.py  test_pipeline.py
tests/abox/csv_pipeline_test/output/: output_csv_parser.ttl  output_pipeline.ttl
tests/abox/csv_without_header/: test_parser.py  test_pipeline.py
tests/abox/csv_without_header/output/: output_csv_parser.ttl  output_csv_pipeline.ttl
tests/abox/dict_custom_properties/: test_pipeline.py
tests/abox/json_custom_relations/: test_json_custom_relations.py
tests/abox/json_multiple_iris/: test_multiple_iris.py
tests/abox/json_pipeline_test/: test_parser.py  test_pipeline.py
tests/abox/json_pipeline_test/output/: output_json_parser.ttl  output_json_pipeline.ttl
tests/abox/xls_custom_relations/: data.xlsx  data2.xlsx  test_xlsx_custom_relations.py
tests/abox/xls_pipeline_test/: test_parser.py  test_pipeline.py
tests/abox/xls_pipeline_test/output/: output_excel_parser.ttl  output_pipeline.ttl  output_pipeline_suffix.ttl
tests/csv_empty_rows/: test_parser.py  test_pipeline.py
tests/csv_empty_rows/input/data/: data.csv
tests/csv_empty_rows/output/: output_csv_pipeline.ttl
tests/csv_pipeline_test/: test_abox_pipeline.py  test_csv2rdf.py  test_parser.py  test_pipeline.py  test_utils.py
tests/csv_pipeline_test/input/mapping/: tensile_test_mapping.csv  tensile_test_mapping.json  tensile_test_mapping.xlsx
tests/csv_pipeline_test/output/: DX56_D_FZ2_WR00_43.abox.ttl  DX56_D_FZ2_WR00_43.datastorage.hdf5  DX56_D_FZ2_WR00_43.generic.xlsx  DX56_D_FZ2_WR00_43.mapping-result.xlsx  DX56_D_FZ2_WR00_43.mapping.ttl  DX56_D_FZ2_WR00_43.metadata.ttl  output_csv_parser.ttl  output_pipeline.ttl
tests/csv_without_header/: test_parser.py  test_pipeline.py
tests/csv_without_header/input/data/: test.csv
tests/csv_without_header/output/: output_csv_parser.ttl  output_csv_pipeline.ttl
tests/json_pipeline_test/: test_parser.py  test_pipeline.py
tests/json_pipeline_test/input/mapping/: tensile_test_mapping.csv  tensile_test_mapping.json  tensile_test_mapping.xlsx
tests/json_pipeline_test/output/: output_json_parser.ttl  output_json_pipeline.ttl
tests/key_map_generation_test/: key_map.db  mapping.xlsx  predicted_mapping.csv  stahl_digital_v23.09.2021.ttl
tests/tbox/csv_pipeline_test/: test_parser.py  test_pipeline.py
tests/tbox/csv_pipeline_test/output/: output_csv_parser.ttl
tests/tbox/explicit_datatypes/: test_explicit_datatypes.py
tests/tbox/json_pipeline_test/: test_parser.py  test_pipeline.py  test_title_exclusion.py
tests/tbox/json_pipeline_test/output/: output_json_parser.ttl  output_json_parser_wo_title.ttl
tests/tbox/xls_pipeline_test/: test_parser.py  test_pipeline.py
tests/xls_pipeline_test/: test_abox_pipeline.py  test_excel2rdf.py  test_parser.py  test_pipeline.py
tests/xls_pipeline_test/input/mapping/: bad_metadata_tensile_test_mapping.json  mapping.xlsx  (+5 more)
tests/xls_pipeline_test/output/: AFZ1-Fz-S1Q.abox.ttl  AFZ1-Fz-S1Q.datastorage.hdf5  AFZ1-Fz-S1Q.generic.xlsx  AFZ1-Fz-S1Q.mapping-result.xlsx  AFZ1-Fz-S1Q.mapping.ttl  AFZ1-Fz-S1Q.metadata.ttl  output_csv_parser.ttl  output_excel_parser.ttl  output_pipeline.ttl
(+37 files in other folders)
