[metadata]
name = data2rdf
version = v1.0.3
description = A generic pipeline that can be used to map raw data to RDF.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MI-FraunhoferIWM/data2rdf
author = Paul Zierep, Yoav Nahshon, Pablo de Andres, Deepu Krishnareddy
author_email = matthias.bueschelberger@iwm.fraunhofer.de, yoav.nahshon@iwm.fraunhofer.de, pablo.de.andres@iwm.fraunhofer.de, deepu.krishnareddy@iwm.fraunhofer.de
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    beautifulsoup4==4.11.2
    chowlk-unofficial-fork==0.0.2
    openpyxl==3.1.1
    pandas==1.5.3
    python-dotenv==0.21.1
    python-magic==0.4.27
    rdflib==6.2.0
    sqlalchemy==1.4.46
    tables==3.8.0
python_requires = >=3.8
include_package_data = True

[options.entry_points]
console_scripts =
    abox_conv = data2rdf.cli.abox_conversion:terminal

[options.extras_require]
dev =
    bumpver==2021.1114
    dunamai==1.7.0
docs =
    ipython==7.22.0
    jinja2==3.0.3
    jupyter==1.0.0
    myst-parser==0.15.2
    nbsphinx==0.8.2
    sphinx==3.5.3
    sphinx-autobuild==2021.3.14
    sphinx-book-theme==0.2.0
    sphinx-copybutton==0.3.1
    sphinx-panels==0.5.2
    sphinxcontrib-redoc==1.6.0
pre_commit =
    pre-commit==2.15.0
tests =
    pytest==6.2.5

[options.package_data]
* = *.csv

[bumpver]
current_version = "v0.0.0"
version_pattern = "vMAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "Bump version {old_version} -> {new_version}"
commit = True
tag = True
push = True

[bumpver:file_patterns]
setup.cfg =
    version = {version}
