[metadata]
name = data2rdf
version = v2.0.0rc14
description = A generic pipeline that can be used to map raw data to RDF.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MI-FraunhoferIWM/data2rdf
author = Paul Zierep, Yoav Nahshon, Pablo de Andres, Deepu Krishnareddy, Matthias Büschelberger
author_email = matthias.bueschelberger@iwm.fraunhofer.de, yoav.nahshon@iwm.fraunhofer.de, pablo.de.andres@iwm.fraunhofer.de, deepu.krishnareddy@iwm.fraunhofer.de, matthias.bueschelberger@iwm.fraunhofer.de
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    beautifulsoup4>=4.0.0
    jsonpath-ng~=1.6.1
    lru-cache<1
    openpyxl>=3,<4
    pandas>=2,<3
    pydantic>=2,<3
    pydantic-settings
    python-dotenv
    rdflib>=6,<7
    requests
    tables>=3,<4
python_requires = >=3.8
include_package_data = True

[options.entry_points]
console_scripts =
    abox_conv = data2rdf.cli.abox_conversion:terminal

[options.extras_require]
dev =
    bumpver==2021.1114
    dunamai==1.7.0
docs =
    html5lib==1.1
    ipython==8.12.3
    jinja2==3.1.3
    jupyter==1.0.0
    myst-parser==2.0.0
    nbsphinx==0.9.3
    sphinx==6.2.1
    sphinx-autobuild==2021.3.14
    sphinx-book-theme==1.0.1
    sphinx-copybutton==0.5.2
    sphinx-design==0.5.0
    sphinxcontrib-redoc==1.6.0
pre_commit =
    pre-commit==2.15.0
tests =
    pytest==8.2.2

[options.package_data]
* = *.csv

[bumpver]
current_version = "v0.0.0"
version_pattern = "vMAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "Bump version {old_version} -> {new_version}"
commit = True
tag = True
push = True

[bumpver:file_patterns]
setup.cfg =
    version = {version}
